--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,21 +12,22 @@
     "extends": [
         "plugin:react/recommended",
         "standard-with-typescript",
-        "plugin:react/recommended",
         "plugin:react-hooks/recommended",
-        "plugin:react/jsx-runtime",
         "plugin:jsx-a11y/recommended",
-        "standard",
         "prettier"
     ],
-    "overrides": [],
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+        "ecmaVersion": 2021,
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     },
     "plugins": [
         "react",
+        "react-hooks",
         "jsx-a11y"
     ],
-    "rules": {}
+    "rules": {
+        "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/explicit-function-return-type": "off"
+    }
 }
