--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     ],
     "rules": {
         "react/react-in-jsx-scope": "off",
-        "@typescript-eslint/explicit-function-return-type": "off"
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-unused-vars": "warn"
     }
 }
