feat: add path alias leading to yup stuff

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,6 +5,9 @@
       "@/*": [
         "./src/*"
       ],
+      "@lib/yup": [
+        "./src/lib/yup/index"
+      ],
       "@components": [
         "./src/components/index"
       ]
