--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
   },
   "include": [
     "src",
-    "./vite.config.ts"
+    "./vite.config.ts",
+    "./tests/setup.ts"
   ],
   "references": [
     {
